<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Activity -->
    <string name="app_name">Starca</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign up</string>


    <string name="editTextDimensionHint">20X40</string>
    <string name="editTextZipCodeHint">90210</string>
    <string name="zipcode">Zip / postcode</string>
    <string name="editTextStateHint">NJ</string>
    <string name="state">State</string>
    <string name="editTextCityHint">Newark</string>
    <string name="city">City</string>
    <string name="editTextAddressHint">123 Nike Drive</string>
    <string name="editTextAddressOptionsHint">Apt 1</string>
    <string name="dimension">Dimension</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="editTextDescriptionHint">Private garage</string>
    <string name="editTextGarageHint">Garage</string>
    <string name="listing_title">Listing Title</string>
    <string name="details">Details</string>
    <string name="address">Street Address</string>
    <string name="addressOption">Apt, suite, etc </string>
    <string name="description">Description</string>

    <!-- Creation Fragments -->
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_transition">Sign up</string>
    <string name="height">Height</string>
    <string name="Width">Width</string>
    <string name="editTextDescriptionHeight">12ft</string>
    <string name="editTextDescriptionHintHeight">12ft</string>
    <string name="editTextDescriptionHintWidth">20ft</string>
    <string name="editTextDescriptionHintDepth">50ft</string>
    <string name="depth">Depth</string>

    <!-- Detail Fragment -->
    <string name="tools_description">This is my beautiful shed. Ever since I sold my Motorcycle I haven’t used this shed at all so I’m listing it here so that someone else can make use of it. I’ve cleared out everything so you have access to the entire shed.</string>
    <string name="rent_button_text">Rent</string>
    <string name="price_placeholder">$0</string>

    <!-- For Message Chat -->
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <!-- Profile Fragment -->
    <string name="tab1_text">Rented</string>
    <string name="tab2_text">Listings</string>

    <!-- Owner Listing Requests Fragment -->
    <string name="wait_text">Awaiting Payment</string>
    <string name="edit_listing_button">Edit Listing</string>
    <string name="no_requests">No requests yet</string>
</resources>